bug #36072: It book a same seat to 2 agents whose shifts are overlapped

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatmap.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatmap.scss
@@ -262,7 +262,7 @@ seatmap-editor{
 		top: -1px;
 		width: 18px;
 		height: 19px;
-		background: url(../js/SeatManagement/Images/group.svg);
+		background: url(/WFM/js/seatManagement/images/group.svg);
 	}
 
 	.ungroup-icon {
@@ -270,7 +270,7 @@ seatmap-editor{
 		top: -1px;
 		width: 18px;
 		height: 19px;
-		background: url(../js/SeatManagement/Images/ungroup.svg);
+		background: url(/WFM/js/seatManagement/images/ungroup.svg);
 	}
 
 	.save-icon-unsaved-changes{
